<resources>
    <string name="app_name">见识</string>

    <string name="home">首页</string>
    <string name="daily">日常</string>
    <string name="recommend">推荐</string>
    <string name="community">社区</string>
    <string name="discover">发现</string>
    <string name="me">我的</string>
    <string name="cancel">取消</string>
    <string name="search_history">搜索历史</string>
    <string name="delete">删除</string>
    <string name="search_recommend">推荐搜索</string>
    <string name="my_collection">我的收藏</string>
    <string name="my_download">我的下载</string>
    <string name="history_record">历史记录</string>
    <string name="me_playInfo">播放记录</string>
<!--    下载状态-->
    <string name="state_pre">获取请求中</string>
    <string name="state_waiting">等待中</string>
    <string name="state_pause">暂停</string>
    <string name="state_fail">失败</string>
    <string name="state_complete">下载完成</string>
    <string name="me_myDownload">我的下载</string>
    <string name="works">作品</string>
    <string name="follows">关注度</string>
    <string name="fans">粉丝</string>
    <string name="search_result">搜索结果</string>
    <string name="collection_list">收藏列表</string>
    <string name="history_list">历史列表</string>
    <string name="video_detail">视频详情</string>
    <string name="look_history">观看历史</string>
    <string name="restart">重启</string>
    <string name="error_occurred_explanation">发生意外错误。\n抱歉，给您带来不便。</string>
    <string name="close_app">关闭程序</string>
    <string name="error_details">错误日志</string>
    <string name="error_details_title">错误详情</string>
    <string name="error_details_close">关闭</string>
    <string name="error_details_clipboard_label">错误信息</string>
    <string name="error_details_copy">复制错误信息</string>

</resources>
